Styling the page buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,8 +200,17 @@ body {
 .resultConatiner .description{
 	font-size: 12px;
 }
-
-
+.paginationContainer{
+	display:flex;
+	justify-content: center;
+	margin-bottom:25px;
+}
+.pageButtons{
+	display:flex;
+}
+.pageNumberContainer img{
+	height:37px;
+}
 
 
 
