Code to show the page number

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,12 @@ body {
 .pageNumberContainer img{
 	height:37px;
 }
+.pageNumberContainer{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	text-decoration: none;
+}
 
 
 
