--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,11 +211,18 @@ body {
 .pageNumberContainer img{
 	height:37px;
 }
-.pageNumberContainer{
+.pageNumberContainer,
+.pageNumberContainer a{
 	display:flex;
 	flex-direction: column;
 	align-items: center;
 	text-decoration: none;
+}
+.pageNumber{
+	color:#000;
+}
+a .pageNumber{
+	color:#4285f4;
 }
 
 
