Not loading the broken images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ a .pageNumber{
 .gridItem img{
 	max-width: 200px;
 	min-width: 50px;
+	visibility:hidden;
 }
 .gridItem .details{
 	visibility:hidden;
